all the initial stuff